--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<button class="btn" id="btn2">Add</button>
 			</div>
 			<div class="item">
-				<img src="media/pizza.JPG alt="" class="img">
+				<img src="media/pizza.JPG alt=" alt="" class="img">
 				<button class="btn" id="btn3">Add</button>
 			</div>
 			<div class="item">
