change structure step 1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<div class="container">
+	<!-- <div class="container">
 		<div class="inner">
 			<div class="item">
 				<img src="media/pizza.JPG" alt="" class="img"><br>
@@ -34,7 +34,17 @@
 				<button class="btn" id="btn6">Add</button>
 			</div>
 		</div>
-	</div>
+	</div> -->
+
+    <div>
+        <table class='reg-table'>
+            <tr><input type="text" id="fio" placeholder="ФИО"></tr><br>
+            <tr><input type="tel" id="tel" placeholder="Номер телефона"></tr><br>
+            <tr><input type="text" id="car" placeholder="Марка и модель автомобиля"></tr><br>
+            <tr><input type="number" id="weight" placeholder="Масса автомобиля" min="1000" max="4000" style="width: 170px;"></tr><br>
+            <tr><input type="text" id="carreg" placeholder="Регистрационный номер автомобиля"></tr><br>
+        </table>
+    </div>
 	<div class="usercard" id="usercard">
 		
 	</div>
