--- a/index.html
+++ b/index.html
@@ -7,43 +7,23 @@
 	<title>Document</title>
 </head>
 <body>
-	<!-- <div class="container">
-		<div class="inner">
-			<div class="item">
-				<img src="media/pizza.JPG" alt="" class="img"><br>
-				<button class="btn" id="btn1">Add</button>
-			</div>
-			<div class="item">
-				<img src="media/pizza.JPG" alt="" class="img"><br>
-				<button class="btn" id="btn2">Add</button>
-			</div>
-			<div class="item">
-				<img src="media/pizza.JPG" alt="" class="img"><br>
-				<button class="btn" id="btn3">Add</button>
-			</div>
-			<div class="item">
-				<img src="media/pizza.JPG" alt="" class="img"><br>
-				<button class="btn" id="btn4">Add</button>
-			</div>
-			<div class="item">
-				<img src="media/pizza.JPG" alt="" class="img"><br>
-				<button class="btn" id="btn5">Add</button>
-			</div>
-			<div class="item">
-				<img src="media/pizza.JPG" alt="" class="img"><br>
-				<button class="btn" id="btn6">Add</button>
-			</div>
-		</div>
-	</div> -->
 
     <div>
-        <table class='reg-table'>
+        <div class="container">
             <tr><input type="text" id="fio" placeholder="ФИО"></tr><br>
+        </div>
+        <div class="container">
             <tr><input type="tel" id="tel" placeholder="Номер телефона"></tr><br>
+        </div>
+        <div class="container">
             <tr><input type="text" id="car" placeholder="Марка и модель автомобиля"></tr><br>
+        </div>
+        <div class="container">
             <tr><input type="number" id="weight" placeholder="Масса автомобиля" min="1000" max="4000" style="width: 170px;"></tr><br>
+        </div>
+        <div class="container">
             <tr><input type="text" id="carreg" placeholder="Регистрационный номер автомобиля"></tr><br>
-        </table>
+        </div>
     </div>
 	<div class="usercard" id="usercard">
 		
