--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
     <div>
         <div class="container">
-            <tr><input type="text" id="fio" placeholder="ФИО"></tr><br>
+            <input type="text" id="fio" placeholder="ФИО"><br>
         </div>
         <div class="container">
-            <tr><input type="tel" id="tel" placeholder="Номер телефона"></tr><br>
+            <input type="tel" id="tel" placeholder="Номер телефона"><br>
         </div>
         <div class="container">
-            <tr><input type="text" id="car" placeholder="Марка и модель автомобиля"></tr><br>
+            <input type="text" id="car" placeholder="Марка и модель автомобиля"><br>
         </div>
         <div class="container">
-            <tr><input type="number" id="weight" placeholder="Масса автомобиля" min="1000" max="4000" style="width: 170px;"></tr><br>
+            <input type="number" id="weight" placeholder="Масса автомобиля" min="1000" max="4000"><br>
         </div>
         <div class="container">
-            <tr><input type="text" id="carreg" placeholder="Регистрационный номер автомобиля"></tr><br>
+            <input type="text" id="carreg" placeholder="Рег. номер автомобиля"><br>
         </div>
     </div>
 	<div class="usercard" id="usercard">
