--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="autocomplete.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
