--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div>
+    <div id="form-page" class="page">
         <div class="container">
             <input type="text" id="fio" placeholder="ФИО"><br>
         </div>
@@ -26,7 +26,11 @@
             <input type="text" id="carreg" placeholder="Рег. номер автомобиля"><br>
         </div>
     </div>
-    <div class="usercard" id="usercard"></div>
+
+    <div id="main-menu" class="page" style="display:none;">
+        <h1>Выберите услугу</h1>
+        <!-- Ваше меню -->
+    </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
