--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="main-menu" class="page" style="display:none;">
         <h1>Выберите услугу</h1>
-        <!-- Ваше меню -->
+        <div class="btn">Полироль</div>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
