--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
 
     <div id="main-menu" class="page" style="display:none;">
         <h1>Выберите услугу</h1>
-        <div class="btn">Полироль</div>
+        <div class="container">
+            <div class="btn">Оформить заказ</div>
+        </div>
+        <div class="container">
+            <div class="btn">Мои данные</div>
+        </div>
+        <div class="container">
+            <div class="btn">Шаблоны</div>
+        </div>
+        <div class="container">
+            <div class="btn">Помощь</div>
+        </div>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
